# an-anime-game-launcher

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  about.html  analytics.html  build.rs  bundle-appimage.cjs  entry.js  flake.nix  fluentscan.py  index.html  neutralino.config.json  package.json  runners.json  rustfmt.toml  screenshots.html  settings.html  shell.nix  splash.html  svelte.config.js  tos-violation.html  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml  reports.yml
.github/workflows/: build.yml  buildnup.yml  check_source_code.yml  check_target_branch.yml  compile_release_build.yml  target-branch.yml
.gitlab/issue_templates/: default.md  feature_request.md
assets/: anime-game-launcher.desktop  dxvk.json  moe.launcher.an-anime-game-launcher.metainfo.xml  resources.xml  wine.json
assets/locales/: common.ftl
assets/locales/cs/: components.ftl  enhancements.ftl  environment.ftl  errors.ftl  first_run.ftl  game.ftl  gamescope.ftl  general.ftl  main.ftl  sandbox.ftl
assets/locales/de/: components.ftl  enhancements.ftl  environment.ftl  errors.ftl  first_run.ftl  game.ftl  gamescope.ftl  general.ftl  main.ftl  sandbox.ftl
assets/locales/en/: components.ftl  enhancements.ftl  environment.ftl  errors.ftl  first_run.ftl  gamescope.ftl  general.ftl  main.ftl
assets/locales/es/: components.ftl  enhancements.ftl  environment.ftl  errors.ftl  game.ftl  (+5 more)
assets/ui/: first_run.blp  main.blp  preferences.blp  preferences_enhanced.blp  preferences_enhancements.blp  preferences_general.blp
public/: dxvks.json  dxvks.yaml  runners.json  runners.yaml
public/css/: layout.min.css
public/discord-rpc/: discord-rpc
public/hdiffpatch/: LICENSE  hpatchz
public/html/: analytics.html  index.html  settings.html
public/locales/: de-de.yaml  de.json  en-us.json  en-us.yaml  en.json  en.yaml  es-es.yaml  es.json  fr-fr.yaml  fr.json  hu-hu.yaml  id-id.yaml  id.json  it-it.yaml  ja-jp.yaml  ja.json  ko.json  nb-no.yaml  pt.json  ru-ru.yaml  ru.json  ru.yaml  th.json  tr-tr.yaml  uwu.yaml  vi-vn.yaml  vi.json  zh-cn.json  zh-cn.yaml  zh-tw.json
public/patch/: patch.json  patch.sh  patch_anti_logincrash.sh
public/splash/: index.html
repository/: logo.xcf
repository/pages/: ROADMAP.md  STATISTICS.md
scripts/: build.sh  bundle-appimage-pure.cjs  bundle-appimage-with-libs.cjs  bundle-appimage.cjs  ci-appimage-prep.sh
scripts/appimage/: anime-game-launcher.desktop  build_appimage.sh  run.sh
src/: analytics.svelte  background.rs  defaultSettings.ts  empathize.ts  entry.js  i18n.rs  i18n.ts  index.svelte  main.rs  move_files.rs  move_folder.rs  prettify_bytes.rs  screenshots.svelte  settings.svelte  splash.svelte  styles.css  tos-violation.svelte
src/components/: Button.svelte  Checkbox.svelte  Checkbox.vue  DXVKItem.vue  DXVKSelectionList.svelte  DXVKs.vue  DiscordSettings.svelte  DropdownCheckboxes.svelte  EnvironmentManager.svelte  Image.svelte  LanguageSelection.vue  LeftCheckbox.svelte  RunnerSelectionList.svelte  Selectbox.vue  SelectionBox.svelte  ShadersSelection.svelte  WineVDSettings.svelte
src/css/: hint.min.css  index.css
src/html/: index.html
src/js/: index.js
src/lib/: config.rs  consts.rs  discord_rpc.rs  dxvk.rs  game.rs  mod.rs  prettify_bytes.rs  tasks.rs  wine.rs  wine_prefix.rs
src/pages/: about.ts  analytics.ts  common-init.ts  index.ts  screenshots.ts  settings.ts  splash.ts  tos-violation.ts
src/sass/: analytics.sass  basic.sass  components.sass  index.sass  screenshots.sass  settings.sass  splash.sass  tos-violation.sass
src/ts/: AbstractInstaller.ts  Archive.ts  Configs.ts  Constants.ts  DXVK.ts  Downloader.ts  FPSUnlock.ts  GIJSON.d.ts  Game.ts  Genshinlib.ts  Launcher.ts  LauncherUI.ts  Patch.ts  Runners.ts  Voice.ts  analytics.ts  i18n.ts  index.ts  settings.ts  test.ts
src/ui/: about.rs  first_run.rs  main.rs  migrate_installation.rs  mod.rs  toast_error.rs
ui/: main.blp  preferences.blp
(+367 files in other folders)
