[package]
name = "anime-game-launcher"
version = "3.9.2"
description = "Anime Game launcher"
authors = ["Nikita Podvirnyy <krypt0nn@vk.com>"]
homepage = "https://github.com/an-anime-team/an-anime-game-launcher"
repository = "https://github.com/an-anime-team/an-anime-game-launcher"
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"

[build-dependencies]
glib-build-tools = "0.18"

[dependencies.anime-launcher-sdk]
git = "https://github.com/an-anime-team/anime-launcher-sdk"
tag = "1.12.4"
features = ["all", "genshin"]

# path = "../anime-launcher-sdk" # ! for dev purposes only

[dependencies]
relm4 = { version = "0.7.0-beta.2", features = ["macros", "libadwaita"] }
gtk = { package = "gtk4", version = "0.7.3", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.5.3", features = ["v1_3"] }

rfd = { version = "0.12.1", features = ["xdg-portal"], default-features = false }
open = "5.0.0"
whatadistro = "0.1.0"

serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4.0"
cached = { version = "0.46", features = ["proc_macro"] }
md-5 = { version = "0.10", features = ["asm"] }

tracing = "0.1"
tracing-subscriber = "0.3"

fluent-templates = "0.8"
unic-langid = "0.9"

human-panic = "1.2.2"
