[package]
name = "anime-game-launcher"
version = "3.12.1"
description = "Anime Game launcher"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/an-anime-team/an-anime-game-launcher"
repository = "https://github.com/an-anime-team/an-anime-game-launcher"
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"

[build-dependencies]
glib-build-tools = "0.20"

[dependencies.anime-launcher-sdk]
git = "https://github.com/an-anime-team/anime-launcher-sdk"
tag = "1.20.3"
features = ["all", "genshin"]

# path = "../anime-launcher-sdk" # ! for dev purposes only

[dependencies]
relm4 = { version = "0.9.0", features = ["macros", "libadwaita"] }
gtk = { package = "gtk4", version = "0.9.0", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_4"] }

rfd = { version = "0.14.1", features = ["xdg-portal", "tokio"], default-features = false }
open = "5.3.0"
whatadistro = "0.1.0"

serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.5.0"
cached = { version = "0.53", features = ["proc_macro"] }
md-5 = { version = "0.10", features = ["asm"] }
enum-ordinalize = "4.3"

tracing = "0.1"
tracing-subscriber = "0.3"

fluent-templates = "0.10"
unic-langid = "0.9"

human-panic = "2.0.1"
